--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -47,7 +47,7 @@
 
         <li class="nav-item offset-1 mb-2 show collapse pd <%= active_class_for_url(statistics_release_plans_path) %>">
           <div class="d-flex align-items-center">
-            <i class="bi bi-bar-chart text-white me-1"></i>
+            <i class="bi bi-pie-chart-fill text-white me-1"></i>
             <%= link_to t(".list_statistic_release"), statistics_release_plans_path(year: year_field_value(params[:year])), class: "nav-link fw-bold" %>
           </div>
         </li>
